src/css/input.css
@font-face {
    font-family: 'SF Pro Display';
    src: url('../fonts/SFProDisplay-Regular.eot');
    src: url('../fonts/SFProDisplay-Regular.eot?#iefix') format('embedded-opentype'),
        url('../fonts/SFProDisplay-Regular.woff2') format('woff2'),
        url('../fonts/SFProDisplay-Regular.woff') format('woff'),
        url('../fonts/SFProDisplay-Regular.ttf') format('truetype'),
        url('../fonts/SFProDisplay-Regular.svg#SFProDisplay-Regular') format('svg'),
        url('../fonts/SFProDisplay-Regular.OTF') format('otf');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@tailwind base;
@tailwind components;
@tailwind utilities;

/*  styles for space between footers and header 
  */
html,
body {
    height: 100%;
}

.wrapper {
    @apply min-h-full flex flex-col
}

/* all container wraper */
.container-wrapper {
    @apply container max-w-[1152px] w-full mx-auto px-6 xl:px-0
}

/* btn learn more, contact */
@layer components {
    .btn-primary {
        @apply bg-colorsText-blue hover:bg-colorsText-darkGray text-white text-headerItem py-4 px-5 mx-auto rounded-lg cursor-pointer transition-colors duration-75 focus:ring-2
    }

    /* btn see all  */
    .btn-see-all {
        @apply btn-primary px-[50px] rounded-[30px] shadow-2xl shadow-colorsText-blue hover:shadow-colorsText-darkGray
    }

    /* underlined buttons grey */
    .more-link {
        @apply text-btnrtext underline text-colorsText-darkGray hover:text-colorsText-headerMenu
        /* hover ar chans dizainshi */
    }
    .nav-links {
        @apply text-headerItem text-colorsText-headerMenu hover:text-black cursor-pointer inline-block
    }

    /* rose titles of section responsive */
    .heading-base {
        @apply text-heading-md lg:text-heading-lg text-colorsText-rose
    }

    /* main paaragrafs responsive */
    .paragraph-base {
        @apply text-size-lg text-black
    }

    /* rose paginations a */
    .pagination-links {
        @apply relative rounded-full border border-solid border-colorsText-rose w-[46px] h-[46px] text-size-lg text-colorsText-rose transition-all duration-300 bg-transparent hover:bg-colorsText-rose hover:text-white active:bg-colorsText-rose active:text-white cursor-pointer
    }

    /* paginations iner text - 1 2 3  */
    .pagination-items {
        @apply absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2
    }

    /* labels+++*/
    .label {
        @apply rounded-[40px] bg-white text-size-sm font-bold text-colorsText-blue px-2 cursor-pointer shadow-xl shadow-[rgba(0, 0, 0, 0.5)]
    }
    /* burger menu */
    .burger-menu{
      @apply  h-[34px] w-[34px] bg-bg-main rounded-lg rotate-0 transition-all cursor-pointer
    }

    .burger-menu-line {
        @apply block absolute left-[9px] h-[2px] w-4 bg-black opacity-100 rotate-0 ease-in-out transition-all mx-auto 
    }
   

    /*  icentreba X  */
    .active {
        @apply pl-[7px]
    }

    .title {
        @apply direction-row text-size-xl text-white lg:nav-links pl-3
    }
    
    .icon-up{
        @apply rotate-180 rotate-0
    }
    
    .mobile-dropdown{
        @apply p-[10px] space-y-2
    }

  .dropdown {
        @apply absolute top-10 hidden transition ease-linear  duration-1000 hover:delay-1000 rounded-[10px] p-[7px] shadow-lg  cursor-pointer z-50 group-hover:block bg-white hover:transition-all
    }
    .mobile-dropdown-link{
        @apply text-size-xl lg:text-headerItem text-bg-iconBlue lg:text-colorsText-headerMenu bg-colorsText-darkGray lg:bg-white after:content-['>'] after:opacity-100 lg:after:opacity-0 after:text-bg-iconBlue lg:after:text-colorsText-headerMenu direction-row py-[10px] px-5 lg:px-[10px] after:float-right rounded-lg  lg:hover:text-colorsText-rose lg:hover:bg-bg-iconRose lg:after:ml-[16px] lg:hover:after:opacity-100 cursor-pointer lg:hover:transition-all
    }
}

/* new styles new index */
@layer components {

.direction-row {
    @apply flex items-center justify-between
}
.contact {
    @apply hidden lg:inline-block
}

.menu-container{
    @apply  absolute lg:relative top-[58px] lg:top-0 left-0 w-full h-0 lg:h-fit overflow-hidden ease-in-out lg:overflow-visible
}


.dropdown-menu{
    @apply  h-full w-full overflow-y-hidden lg:overflow-hidden lg:flex lg:justify-end items-center
}

.dropdown-menu-show{
    @apply h-[100vh] w-full bg-black
}

/* search popup  */

.overlay{
    @apply h-[100vh] w-full absolute z-50 top-[0] left-0 bg-black bg-[#000000cc] flex justify-center items-center
}
.search-container{
    @apply bg-transparent w-[80%] py-[15px] text-white text-size-lg mx-auto space-y-[15px] border-b-2
}
.search-item{
    @apply cursor-pointer hover:text-bg-mainDark transition-colors duration-200
}
.search-see-all-items{
    @apply inline-block w-[90%] text-center mt-[15px] text-size-xl text-white hover:text-bg-mainDark transition-colors duration-200
}
}

